# kairos

./: .gitignore  README.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 33bc43452d5c_add_validation_and_evidence_fields_to_.py  5c07aa4c2f29_refactor_learned_patterns_for_.py  641a06b67201_add_source_upload_id_to_learned_patterns.py  70c38cee01d2_add_plans_and_plan_features_tables_for_.py  71b3a59ec25d_add_trigger_threshold_to_learned_.py  812652f96f99_add_interaction_id_split_to_historical_.py  94b5722156bf_add_human_interactions_table.py  a41bd809ab11_create_initial_database_schema.py  b3456032397f_create_baseline_migration_to_sync_with_.py  e7afec2fc3a3_add_strategy_embedding_and_threshold_to_.py
backend/app/: database.py  main.py  worker.py
backend/app/api/v1/endpoints/: agents.py  analytics.py  api_keys.py  historical_data.py  human_interactions.py  sdk.py  users.py
backend/app/background/: tasks.py
backend/app/core/: async_context.py  celery_app.py  config.py  dependencies.py  security.py
backend/app/models/: __init__.py  agent.py  agent_api_key.py  base.py  experiment.py  historical_interaction.py  historical_upload.py  human_interaction.py  interaction.py  learned_pattern.py  organization.py  outcome.py  plan.py  plan_feature.py  suggested_opportunity.py  user.py
backend/app/schemas/: __init__.py  agent.py  agent_api_key.py  organization.py  sdk.py  token.py  user.py
backend/app/services/: agent_service.py  api_key_service.py  embedding_service.py  llm_service.py  organization_service.py  sdk_service.py  transcription_service.py  user_service.py
backend/tests/: conftest.py
backend/tests/api/v1/: test_agents.py
docs/: index.html  script.js  style.css
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/components/: auth-layout.tsx  historical-upload-wizard.tsx  login-form.tsx  performance-chart.tsx  register-agent-form.tsx  signup-form.tsx
frontend/src/lib/: csvHelper.ts
tools/: analyze_clusters.py  demo_insurance_calls.csv  generate_deep_search_data.py  generate_demo_dataset.py  generate_test_data.py  generated_deep_search_data.csv  generated_test_data.csv  process_auto_calls.py  process_insurance_calls  processed_automotive_calls.csv  processed_insurance_calls.csv  processed_insurance_calls_500.csv  test_contrastive_engine.py  test_live_learning_engine.py  test_live_learning_unique.py  test_opportunity_engine.py
(+12 files in other folders)
