[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohit Motwani",email = "mohitmotwani1999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pgvector (>=0.4.1,<0.5.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "supabase (>=2.18.0,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.42,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.3.0,<7.0.0)",
    "openai (>=1.99.1,<2.0.0)",
    "fastapi-cors (>=0.0.6,<0.0.7)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
